--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -41,16 +41,13 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-
-        <!-- if a trading stds user - start -->
         <div class="govuk-warning-text govuk-!-display-inline-block">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
-                There are no products, businesses, or risk assessments <br class="opss-br-desktop">currently added to this case.
+                A product has not been added to this case.
             </strong>
         </div>
-        <!-- if a trading stds user - end -->
 
         {% include "psd-revised-flow/inc_top_nav_2_empty.html" %}
 
