--- a/app/views/psd-revised-flow/inc_left_nav_1d.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1d.html
@@ -1,6 +1,6 @@
 <ul class="govuk-list opss-left-nav">
     <li>
-        <a href="#" class="govuk-link govuk-link--no-visited-state">My cases</a>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Your cases</a>
     </li>
     <li>
         <a href="#" class="govuk-link govuk-link--no-visited-state">Team cases</a>
