--- a/app/views/psd-revised-flow/inc_top_nav_1.html
+++ b/app/views/psd-revised-flow/inc_top_nav_1.html
@@ -3,12 +3,9 @@
         <dl role="menu" class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-0 opss-summary-list-mixed opss-summary-list-mixed--sm">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Product</dt>
-                <dd class="govuk-summary-list__value">2 added<!--span class="govuk-visually-hidden">.</span>&nbsp; <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
-                        View<span class="govuk-visually-hidden"> the products</span>
-                    </a-->
-                </dd>
+                <dd class="govuk-summary-list__value">2 added</dd>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                    <a href="/psd-revised-flow/add-a-product" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a product</span>
                     </a>
                 </dd>
