--- a/app/views/psd-revised-flow/inc_top_nav_2_empty.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2_empty.html
@@ -4,7 +4,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Product&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(0<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                    <a href="/psd-revised-flow/add-a-product" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> a product</span>
                     </a>
                 </dd>
