--- a/app/views/psd-revised-flow/inc_left_nav_1_empty.html
+++ b/app/views/psd-revised-flow/inc_left_nav_1_empty.html
@@ -2,7 +2,7 @@
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">
-                    My cases
+                    Your cases
                 </a>
             </li>
             <li>
@@ -17,7 +17,7 @@
 
         <ul class="govuk-list opss-left-nav">
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case</a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span></a>
 
                 <ul class="govuk-list">
                     <li>
