--- a/app/views/psd-revised-flow/inc_products_pg_content_no_owner.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_no_owner.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-        <span class="govuk-caption-l">Allegation 2101-0008 </span>
+        <span class="govuk-caption-m">Allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Products
         </h1>
@@ -28,7 +28,7 @@
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="#" class="govuk-link govuk-link--no-visited-state">
-                    My cases
+                    Your cases
                 </a>
             </li>
             <li>
@@ -43,7 +43,7 @@
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case-trading-stds-landing-different-team.html" class="govuk-link govuk-link--no-visited-state">Case</a>
+                <a href="/psd-revised-flow/case-trading-stds-landing-different-team.html" class="govuk-link govuk-link--no-visited-state">Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span></a>
             </li>
             <li class="opss-left-nav__active">
                 <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
