--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -42,7 +42,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <span class="govuk-caption-l">Create a case pages:</span>
+                    <span class="govuk-caption-m">Create a case pages:</span>
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                         New <abbr>HTML</abbr>/design page templates
                     </h1>
@@ -82,7 +82,7 @@
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-is-the-product-of-concern.html" target="_blank">Why is the product of concern?
                 </a>
-                <br><span class="govuk-!-font-size-16">This splits the current 'Why are you reporting this product?' page over two pages</span>.
+                <br><span class="govuk-!-font-size-16">This splits the current 'Why are you reporting this product?' page over two pages. <br>If 'safe and compliant' is selected then this case <b>can only include one product record</b></span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
@@ -176,7 +176,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing-team-added-to-case.html" target="_blank">
                     OPSS - CASE page - added with no editing rights
                 </a>
-                <br><span class="govuk-!-font-size-16">View for a team added to the case but without editing rights</span>.
+                <br><span class="govuk-!-font-size-16">View for a team added to the case but without editing rights. (Same <abbr>HTML</abbr> with editing rights - showing edit/change links)</span>.
              </li>                                                
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/case-opss-landing__enquiry.html" target="_blank">
@@ -224,7 +224,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-removed" target="_blank">
                     Case - product page - product removed
                 </a>
-                <br><span class="govuk-!-font-size-16">Confirmation the product was removed</span>.
+                <br><span class="govuk-!-font-size-16">Confirmation the product was removed. (No back link)</span>.
             </li>  
             <li>
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/add-a-product" target="_blank">
@@ -249,7 +249,7 @@
                 <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/product-added" target="_blank">
                     Case - product page - product was added 
                 </a>
-                <br><span class="govuk-!-font-size-16">Confirmation the the product record was added</span>.
+                <br><span class="govuk-!-font-size-16">Confirmation the the product record was added. (No back link)</span>.
             </li>                                                
                        
         </ul>  
@@ -289,7 +289,7 @@
             </li>
             <li>
                 <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/product-page-created-is-safe" target="_blank">Product record - is safe</a> 
-                <br><span class="govuk-!-font-size-16">Example of product record showing a case has defined this product as being safe and compliant (as defined when a user first created a case). This will be shown in the Cases tab and a flag at the top of the page</span>.
+                <br><span class="govuk-!-font-size-16">Example of product record showing a case has defined this product as being safe and compliant (as defined when a user first created a case). This will be shown in the Cases tab and a flag at the top of the page. (We remove the 'Add' product links if there is 1 or more products already added)</span>.
             </li>              
         </ol>
 
@@ -572,7 +572,7 @@
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                     <li><span class="todo">To do: </span>Is this case related to the coronavirus (COVID-19) pandemic? </li>
                     <li><span class="todo">To do: </span>Why are you creating a case about a product(s)?</li>
-                    <li><span class="todo">To do: </span>New case reference details <sup>*</sup></li>
+                    <li><span class="todo">To do: </span>New case number details <sup>*</sup></li>
                     <li><span class="todo">To do: </span>Case created confirmation page</li>
                 </ul>
 
