--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -4,10 +4,12 @@
     Products
 {% endblock %}
 
-
-
-
-
+{% block beforeContent %}
+    {{ govukBackLink({
+        text: "Back",
+        href: "#"
+    }) }}
+{% endblock %}
 
 
 
