--- a/app/views/psd-revised-flow/activity.html
+++ b/app/views/psd-revised-flow/activity.html
@@ -11,7 +11,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-                <span class="govuk-caption-l">Allegation 2101-0008 </span>
+                <span class="govuk-caption-m">Allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Activity
                 </h1>
