--- a/app/views/psd-revised-flow/businesses.html
+++ b/app/views/psd-revised-flow/businesses.html
@@ -11,7 +11,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-                <span class="govuk-caption-l">Allegation 2101-0008 </span>
+                <span class="govuk-caption-m">Allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Businesses
                 </h1>
@@ -43,7 +43,7 @@
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
+                    Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span>
                 </a>
             </li>
             <li>
