--- a/app/views/psd-revised-flow/images-empty.html
+++ b/app/views/psd-revised-flow/images-empty.html
@@ -11,13 +11,13 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-                <span class="govuk-caption-l">Allegation 2101-0008 </span>
+                <span class="govuk-caption-m">Allegation 2101-0008 </span>
                 <h1 class="govuk-heading-l">
                     Images
                 </h1>
 
                 <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">
-                    These are the <span class="govuk-!-font-weight-bold">case evidence</span> images showing damage, incidents or injuries included in the case. 
+                    These are the <span class="govuk-!-font-weight-bold">case evidence</span> images showing damage, incidents, injuries or other case evidence.
                 </p>
             </div>
             <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
@@ -43,7 +43,7 @@
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
+                    Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span>
                 </a>
             </li>
             <li>
