--- a/app/views/psd-revised-flow/inc_products_pg_content.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content.html
@@ -1,6 +1,6 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-        <span class="govuk-caption-l">Allegation 2101-0008 </span>
+        <span class="govuk-caption-m">Allegation 2101-0008 </span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Products
         </h1>
@@ -26,10 +26,12 @@
             Skip to the main content
         </a>
 
+        {% include "psd-revised-flow/inc_left_nav_top-part-only.html" %}
+
         <ul class="govuk-list opss-left-nav">
             <li>
                 <a href="/psd-revised-flow/case-trading-stds-landing.html" class="govuk-link govuk-link--no-visited-state">
-                    Case
+                    Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span>
                 </a>
             </li>
             <li class="opss-left-nav__active">
