--- a/app/views/psd-revised-flow/products-2-products-no-owner.html
+++ b/app/views/psd-revised-flow/products-2-products-no-owner.html
@@ -4,7 +4,12 @@
     Products
 {% endblock %}
 
-
+{% block beforeContent %}
+    {{ govukBackLink({
+        text: "Back",
+        href: "cases"
+    }) }}
+{% endblock %}
 
 {% block content %}
 
