--- a/app/views/psd-revised-flow/safety-and-compliance.html
+++ b/app/views/psd-revised-flow/safety-and-compliance.html
@@ -15,7 +15,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <span class="govuk-caption-l">Safety and compliance:</span>
+                    <span class="govuk-caption-m">Safety and compliance:</span>
                     <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
                         This is the saftey and compliance page
                     </h1>
