--- a/app/views/layout-psd-width.html
+++ b/app/views/layout-psd-width.html
@@ -202,7 +202,7 @@
                   <a class="psd-header__link" href="/home">Home</a>
                 </li>
                 <li class="psd-header__navigation-item">
-                    <a class="psd-header__link" href="/cases?allegation=unchecked&amp;created_by%5Bid%5D=&amp;created_by%5Bme%5D=&amp;created_by%5Bmy_team%5D=&amp;created_by%5Bsomeone_else%5D=&amp;enquiry=unchecked&amp;project=unchecked&amp;sort_by=recent&amp;status_open=true&amp;teams_with_access%5Bmy_team%5D=&amp;teams_with_access%5Bother_team_with_access%5D=">Cases</a>
+                    <a class="psd-header__link" style="border-bottom: 2px solid white;" href="/cases?allegation=unchecked&amp;created_by%5Bid%5D=&amp;created_by%5Bme%5D=&amp;created_by%5Bmy_team%5D=&amp;created_by%5Bsomeone_else%5D=&amp;enquiry=unchecked&amp;project=unchecked&amp;sort_by=recent&amp;status_open=true&amp;teams_with_access%5Bmy_team%5D=&amp;teams_with_access%5Bother_team_with_access%5D=">Cases</a>
                 </li>
                 <li class="psd-header__navigation-item ">
                     <a class="psd-header__link" href="/businesses">Businesses</a>
