--- a/app/views/psd-revised-flow/transition-02.html
+++ b/app/views/psd-revised-flow/transition-02.html
@@ -88,11 +88,11 @@
           <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-1 govuk-!-margin-bottom-6 govuk-!-margin-right-6">
           
           <ul class="govuk-list opss-left-nav">
-              <li class="opss-left-nav__active">
-                  <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Case <span class="govuk-!-font-weight-regular">&nbsp;1903-0065</span></a>
-              </li>
               <li>
-                  <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state">Products <span>(1)</span></a>
+                  <a href="#page-content" class="govuk-link govuk-link--no-visited-state">Case <span class="govuk-!-font-weight-regular">&nbsp;1903-0065</span></a>
+              </li>
+              <li class="opss-left-nav__active">
+                  <a href="/psd-revised-flow/products.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
               </li>
               <li>
                   <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
