TSO journey flow pgs and error pgs

--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -75,7 +75,7 @@
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
-                        <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/products-2-products-no-owner-error.html" target="_blank">Why are you creating a case? - error</a>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/why-are-you-creating-a-case-error.html" target="_blank">Why are you creating a case? - error</a>
                     </li>
                 </ul>                
             </li>
@@ -94,13 +94,23 @@
                 </ul>                 
             </li>             
             <li>
-                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name.html" target="_blank">What is the case name?</a>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name.html" target="_blank">Do you want to add a reference number?</a>
                 <br><span class="govuk-!-font-size-16">A new page (with a pre-existing form element)</span>.
 
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
-                        <a class="govuk-link govuk-link--no-visited-state ghost" href="/psd-revised-flow/what-is-the-case-name-error.html" target="_blank">What is the case name? - error</a>
-                        <br><span class="govuk-!-font-size-16">Only 'name' is a required field</span>.
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/do-you-want-to-add-a-ref-number-error.html" target="_blank">Do you want to add a reference number? - error</a>
+                    </li>
+                </ul>                 
+            </li>            
+            <li>
+                <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name.html" target="_blank">What is the case name?</a>
+                <br><span class="govuk-!-font-size-16">A new page and new data field.</span>.
+
+                <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
+                    <li>
+                        <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name-error.html" target="_blank">What is the case name? - error</a>
+                        <br><span class="govuk-!-font-size-16">The 'name' is required field, but also it is required to be unique amongst the team's open cases.</span>.
                     </li>
                 </ul>                 
             </li>
