--- a/app/views/psd-revised-flow/transition-02.html
+++ b/app/views/psd-revised-flow/transition-02.html
@@ -56,7 +56,7 @@
 3. inside div.product-summary: take the contents of the first div.govuk-grid-row and move it to immediately inside the div.govuk-grid-column-two-thirds  
 4. delete the now empty div.govuk-grid-row
 4. take the content of div.govuk-grid-column-one-third and move it inside div.govuk-grid-column-two-thirds at the very end 
-5. delete the now empyt div.govuk-grid-column-one-third
+5. delete the now empty div.govuk-grid-column-one-third
 6. change the class div.govuk-grid-column-two-thirds to div.govuk-grid-column-three-quarters
 -->
 
