opss msa sass update for Slawosz form

--- a/app/views/psd-revised-flow/index.html
+++ b/app/views/psd-revised-flow/index.html
@@ -110,7 +110,7 @@
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced small-links margin-left">
                     <li>
                         <a class="govuk-link govuk-link--no-visited-state" href="/psd-revised-flow/what-is-the-case-name-error.html" target="_blank">What is the case name? - error</a>
-                        <br><span class="govuk-!-font-size-16">The 'name' is required field, but also it is required to be unique amongst the team's open cases.</span>.
+                        <br><span class="govuk-!-font-size-16">The 'name' is required field, but also it is required to be unique amongst the team's open cases. (The 2 errors illustrated would not fire at the same time).</span>.
                     </li>
                 </ul>                 
             </li>
