--- a/app/views/psd-revised-flow/what-is-the-case-name-error.html
+++ b/app/views/psd-revised-flow/what-is-the-case-name-error.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <p id="case-name-error" class="govuk-error-message">
-                    <span class="govuk-visually-hidden">Error:</span> The case name has already been used for an open case by your team
+                    <span class="govuk-visually-hidden">Error:</span> The case name has already been used in an open case by your team
                 </p>
 
                 <input class="govuk-input govuk-!-width-two-thirds govuk-input--error" id="case-name" name="case-name" type="text" aria-describedby="case-name-hint case-name-error" spellcheck="false" maxlength="45">
