--- a/app/assets/sass/opss/_opss-msa.scss
+++ b/app/assets/sass/opss/_opss-msa.scss
@@ -7,6 +7,10 @@
 @import "opss/opss-search";
 @import "opss/opss-pagination";
 
+form.opss-cookie-form {
+    display: flex;
+}
+
 .govuk-list *[class^="govuk-heading"] .govuk-link {
     @include word-wrap;
 }
